# pytest-linter

./: .gitignore  .jscpd.json  .structurelint.yml  README.md  deny.toml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  codeql.yml  docs.yml  merge-gate.yml  mutation-testing.yml  pr-agent.yml  pr-gate.yml  release.yml  sonarcloud.yml
docs/: cli-reference.md  comparison.md  configuration.md  getting-started.md  migration.md
docs/architecture/: ADR-001-project-architecture.md  ADR-002-toolchain.md  ADR-003-quality-gates.md  ADR-004-testing-strategy.md  ADR-005-lint-rule-architecture-and-lsp-server.md
docs/design-history/plans/: 2026-04-26-stub-rules-implementation.md
docs/design-history/specs/: 2026-04-26-stub-rules-implementation-design.md
docs/rules/: index.md
docs/superpowers/specs/: 2026-04-26-ci-workflow-design.md  2026-05-17-core-rule-engine-design.md
python-wrapper/pytest_linter_wrapper/: __init__.py
scripts/: generate-rule-docs.py  generate-soak-repo.py
src/: config.rs  engine.rs  parser.rs
src/rules/: flakiness.rs  maintenance.rs  mocking.rs
tests/: golden_tests.rs  integration_tests.rs  soak_tests.rs
tests/golden/: django_patterns.py  fix_006_stateful_session.py  fix_007_chained_mutation.py  flk_001_async_sleep.py  flk_003_network_httpx.py  flk_003_network_mock_clean.py  inf_003_monkeypatch_nonidiomatic.py  moc_001_patch_definition.py  moc_002_async_magic_mock.py  pandas_patterns.py  pytest_patterns.py
