[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-linter"
version = "0.1.0"
description = "Fast, tree-sitter-powered test smell detector for pytest"
requires-python = ">=3.8"

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ARG", "PL"]

[tool.pyright]
include = ["python-wrapper"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[tool.pytest.ini_options]
testpaths = ["python-wrapper/tests", "tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["python-wrapper"]
branch = true

[tool.coverage.report]
fail_under = 90
