[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-linter"
version = "0.1.0"
description = "Fast, tree-sitter-powered test smell detector for pytest"
requires-python = ">=3.8"

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ARG", "PL"]

[tool.ruff.lint.per-file-ignores]
# Golden test files intentionally contain anti-patterns for the linter to detect
"tests/golden/*.py" = ["F821", "PLR2004", "PLR0133", "SIM105", "SIM115", "E721", "B011", "B018", "PLC0415"]
# Script generates docs with embedded code examples as long string literals
"scripts/generate-rule-docs.py" = ["E501"]
# Wrapper: imports inside function for lazy dependency resolution
"python-wrapper/pytest_linter_wrapper/__init__.py" = ["PLC0415"]

[tool.pyright]
include = ["python-wrapper"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[tool.pytest.ini_options]
testpaths = ["python-wrapper/tests", "tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["python-wrapper"]
branch = true

[tool.coverage.report]
fail_under = 90
